--- a/projects/ng-medium/package.json
+++ b/projects/ng-medium/package.json
@@ -1,9 +1,21 @@
 {
   "name": "ng-medium",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^8.2.14",
     "@angular/core": "^8.2.14",
     "rss-to-json": "^1.0.5"
-  }
+  },
+  "homepage": "https://github.com/pschoffer/ng-medium",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pschoffer/ng-medium"
+  },
+  "keywords": [
+    "angular",
+    "javascript",
+    "typescript",
+    "rss",
+    "medium"
+  ]
 }
